--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -2,3 +2,14 @@ body{
     font-family: Bahnschrift;
     background-color: #1DB954;
 }
+div.charts{
+    height: 80vh;
+    margin:auto;
+}
+.charts{
+display:flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+align-content: center;
+}
