--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -2,14 +2,19 @@ body{
     font-family: Bahnschrift;
     background-color: #1DB954;
 }
-div.charts{
-    height: 80vh;
-    margin:auto;
+
+.display-4{
+    color: white;
 }
-.charts{
-display:flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-align-content: center;
+
+.nav-pills .nav-link.active {
+    background-color: #1DB954;
+}
+
+.nav-link{
+    color: #1DB954;
+}
+
+.nav-link:hover{
+    color: #1DB954;
 }
