--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -13,3 +13,23 @@ justify-content: center;
 flex-direction: column;
 align-content: center;
 }
+body{
+    font-family: Bahnschrift;
+    background-color: #1DB954;
+}
+
+.display-4{
+    color: white;
+}
+
+.nav-pills .nav-link.active {
+    background-color: #1DB954;
+}
+
+.nav-link{
+    color: #1DB954;
+}
+
+.nav-link:hover{
+    color: #1DB954;
+}
